Fixed ideaToolbar color name

--- a/idea/agenda/calendars.page.html
+++ b/idea/agenda/calendars.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="ideaToolbarColor">
+  <ion-toolbar color="ideaToolbar">
     <ion-buttons slot="start">
       <ion-back-button icon="close" [title]="t._('COMMON.CLOSE')"></ion-back-button>
     </ion-buttons>
