--- a/idea/teams/teams.page.html
+++ b/idea/teams/teams.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="ideaToolbarColor">
+  <ion-toolbar color="ideaToolbar">
     <ion-buttons slot="start">
       <ion-back-button icon="close" *ngIf="tc.get('membership')"></ion-back-button>
     </ion-buttons>
