--- a/idea/teams/memberships.page.html
+++ b/idea/teams/memberships.page.html
@@ -45,7 +45,7 @@
         [title]="t._('IDEA.TEAMS.ACTIONS_ON_USER_', { user: m.name })"
         (click)="manageMembership(m)"
       >
-        <ion-icon name="ellipsis-horizontal" slot="icon-only"></ion-icon>
+        <ion-icon name="ellipsis-vertical" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-item>
   </ion-list>
