--- a/idea/teams/teams.page.html
+++ b/idea/teams/teams.page.html
@@ -55,6 +55,7 @@
     <ion-item lines="none" class="noElements" *ngIf="teams && !teams.length">
       <ion-label>
         {{ 'IDEA.TEAMS.NO_TEAMS_AVAILABLE' | translate }}
+        <p class="tappable" (click)="newTeam()">{{ 'IDEA.TEAMS.CREATE_TEAM_HINT' | translate }}</p>
       </ion-label>
     </ion-item>
   </ion-list>
