--- a/idea/teams/teams.page.html
+++ b/idea/teams/teams.page.html
@@ -1,7 +1,9 @@
 <ion-header>
   <ion-toolbar color="ideaToolbar">
     <ion-buttons slot="start">
-      <ion-back-button icon="close" *ngIf="tc.get('membership')"></ion-back-button>
+      <ion-button *ngIf="tc.get('membership')" [title]="t._('COMMON.CLOSE')" (click)="close()">
+        <ion-icon name="arrow-back" slot="icon-only"></ion-icon>
+      </ion-button>
     </ion-buttons>
     <ion-title>{{ 'IDEA.TEAMS.SELECT_A_TEAM' | translate }}</ion-title>
     <ion-buttons slot="end">
