--- a/idea/auth/newPassword.page.html
+++ b/idea/auth/newPassword.page.html
@@ -2,12 +2,8 @@
   <form class="flexBox">
     <ion-card class="authCard">
       <ion-card-header>
-        <ion-card-title color="primary">
-          {{ 'IDEA.AUTH.CHOOSE_A_PASSWORD' | translate }}
-        </ion-card-title>
-        <ion-card-subtitle>
-          {{ 'IDEA.AUTH.YOU_NEED_TO_CHOOSE_A_NEW_PASSWORD' | translate }}
-        </ion-card-subtitle>
+        <ion-card-title color="primary">{{ 'IDEA.AUTH.CHOOSE_A_PASSWORD' | translate }}</ion-card-title>
+        <ion-card-subtitle>{{ 'IDEA.AUTH.YOU_NEED_TO_CHOOSE_A_NEW_PASSWORD' | translate }}</ion-card-subtitle>
       </ion-card-header>
       <ion-card-content>
         <p class="errorBox" *ngIf="errorMsg">
