--- a/idea/teams/memberships.page.html
+++ b/idea/teams/memberships.page.html
@@ -5,9 +5,7 @@
         <ion-icon name="arrow-back" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
-    <ion-title>
-      {{ 'IDEA.TEAMS.TEAM_MEMBERS' | translate }}
-    </ion-title>
+    <ion-title>{{ 'IDEA.TEAMS.TEAM_MEMBERS' | translate }}</ion-title>
     <ion-buttons slot="end">
       <ion-button [title]="t._('IDEA.TEAMS.INVITE_USER_HINT')" (click)="addMember()">
         <ion-icon name="person-add" slot="icon-only"></ion-icon>
