--- a/idea/auth/confirmPassword.page.html
+++ b/idea/auth/confirmPassword.page.html
@@ -2,12 +2,8 @@
   <form class="flexBox">
     <ion-card class="authCard">
       <ion-card-header>
-        <ion-card-title color="primary">
-          {{ 'IDEA.AUTH.CHANGE_THE_PASSWORD' | translate }}
-        </ion-card-title>
-        <ion-card-subtitle>
-          {{ 'IDEA.AUTH.CHANGE_THE_PASSWORD_HINT' | translate: { n: 8 } }}
-        </ion-card-subtitle>
+        <ion-card-title color="primary">{{ 'IDEA.AUTH.CHANGE_THE_PASSWORD' | translate }}</ion-card-title>
+        <ion-card-subtitle>{{ 'IDEA.AUTH.CHANGE_THE_PASSWORD_HINT' | translate: { n: 8 } }}</ion-card-subtitle>
       </ion-card-header>
       <ion-card-content>
         <p class="errorBox" *ngIf="errorMsg">
