--- a/idea/auth/forgotPassword.page.html
+++ b/idea/auth/forgotPassword.page.html
@@ -2,12 +2,8 @@
   <form class="flexBox">
     <ion-card class="authCard">
       <ion-card-header>
-        <ion-card-title color="primary">
-          {{ 'IDEA.AUTH.PASSWORD_RESET' | translate }}
-        </ion-card-title>
-        <ion-card-subtitle>
-          {{ 'IDEA.AUTH.PASSWORD_RESET_HINT' | translate }}
-        </ion-card-subtitle>
+        <ion-card-title color="primary">{{ 'IDEA.AUTH.PASSWORD_RESET' | translate }}</ion-card-title>
+        <ion-card-subtitle>{{ 'IDEA.AUTH.PASSWORD_RESET_HINT' | translate }}</ion-card-subtitle>
       </ion-card-header>
       <ion-card-content>
         <ion-item>
