--- a/idea/auth/signUp.page.html
+++ b/idea/auth/signUp.page.html
@@ -2,12 +2,8 @@
   <form class="flexBox">
     <ion-card class="authCard">
       <ion-card-header>
-        <ion-card-title color="primary">
-          {{ 'IDEA.AUTH.NEW_ACCOUNT' | translate }}
-        </ion-card-title>
-        <ion-card-subtitle>
-          {{ 'IDEA.AUTH.REGISTER_A_NEW_ACCOUNT_TO_THE_SYSTEM' | translate }}
-        </ion-card-subtitle>
+        <ion-card-title color="primary">{{ 'IDEA.AUTH.NEW_ACCOUNT' | translate }}</ion-card-title>
+        <ion-card-subtitle>{{ 'IDEA.AUTH.REGISTER_A_NEW_ACCOUNT_TO_THE_SYSTEM' | translate }}</ion-card-subtitle>
       </ion-card-header>
       <ion-card-content>
         <p class="errorBox" *ngIf="errorMsg">
