--- a/modules/auth/src/signIn.page.html
+++ b/modules/auth/src/signIn.page.html
@@ -7,7 +7,7 @@
       <ion-card class="authCard">
         <ion-img
           [title]="t._('IDEA_AUTH.SERVICE_LOGO')"
-          [src]="tc.get('darkMode') ? 'assets/icons/icon-auth-alt.svg' : 'assets/icons/icon-auth.svg'"
+          [src]="darkMode ? 'assets/icons/icon-auth-alt.svg' : 'assets/icons/icon-auth.svg'"
         ></ion-img>
         <ion-card-header>
           <ion-card-title color="primary" *ngIf="title">{{ title }}</ion-card-title>
@@ -145,7 +145,7 @@
       <ion-img
         class="ideaLogo"
         *ngIf="website"
-        [src]="tc.get('darkMode') ? './assets/icons/idea-alt.png' : './assets/icons/idea.png'"
+        [src]="darkMode ? './assets/icons/idea-alt.png' : './assets/icons/idea.png'"
         [title]="t._('IDEA_AUTH.IDEA_TAGLINE')"
         (click)="openLink(website)"
       ></ion-img>
