feat(auth): support for MFA through Cognito

--- a/modules/auth/src/confirmPassword.page.html
+++ b/modules/auth/src/confirmPassword.page.html
@@ -22,8 +22,8 @@
             autocorrect="off"
             autocapitalize="off"
             autocomplete="email"
-            [placeholder]="t._('IDEA_AUTH.EMAIL')"
-            [title]="t._('IDEA_AUTH.EMAIL_HINT')"
+            [placeholder]="'IDEA_AUTH.EMAIL' | translate"
+            [title]="'IDEA_AUTH.EMAIL_HINT' | translate"
             [ngModelOptions]="{ standalone: true }"
             [(ngModel)]="email"
             (keyup.enter)="confirmPassword()"
@@ -39,8 +39,8 @@
             autocorrect="off"
             autocapitalize="off"
             autocomplete="off"
-            [placeholder]="t._('IDEA_AUTH.RESET_CODE')"
-            [title]="t._('IDEA_AUTH.RESET_CODE_HINT')"
+            [placeholder]="'IDEA_AUTH.RESET_CODE' | translate"
+            [title]="'IDEA_AUTH.RESET_CODE_HINT' | translate"
             [ngModelOptions]="{ standalone: true }"
             [(ngModel)]="code"
             (keyup.enter)="confirmPassword()"
@@ -58,21 +58,25 @@
             autocapitalize="off"
             autocomplete="new-password"
             [clearOnEdit]="false"
-            [placeholder]="t._('IDEA_AUTH.NEW_PASSWORD')"
-            [title]="t._('IDEA_AUTH.CHOOSE_A_PASSWORD')"
+            [placeholder]="'IDEA_AUTH.NEW_PASSWORD' | translate"
+            [title]="'IDEA_AUTH.CHOOSE_A_PASSWORD' | translate"
             [ngModelOptions]="{ standalone: true }"
             [(ngModel)]="newPassword"
             (keyup.enter)="confirmPassword()"
           ></ion-input>
         </ion-item>
-        <ion-button expand="block" [title]="t._('IDEA_AUTH.CHANGE_MY_PASSWORD_HINT')" (click)="confirmPassword()">
+        <ion-button
+          expand="block"
+          [title]="'IDEA_AUTH.CHANGE_MY_PASSWORD_HINT' | translate"
+          (click)="confirmPassword()"
+        >
           {{ 'IDEA_AUTH.CHANGE_MY_PASSWORD' | translate }}
         </ion-button>
         <ion-button
           fill="clear"
           expand="block"
           class="smallCaseButton"
-          [title]="t._('IDEA_AUTH.HAVEN_T_RECEIVED_A_RESET_CODE_HINT')"
+          [title]="'IDEA_AUTH.HAVEN_T_RECEIVED_A_RESET_CODE_HINT' | translate"
           (click)="goToForgotPassword()"
         >
           {{ 'IDEA_AUTH.HAVEN_T_RECEIVED_A_RESET_CODE' | translate }}
@@ -81,7 +85,7 @@
           fill="clear"
           expand="block"
           class="smallCaseButton"
-          [title]="t._('IDEA_AUTH.BACK_TO_SIGN_IN_HINT')"
+          [title]="'IDEA_AUTH.BACK_TO_SIGN_IN_HINT' | translate"
           (click)="goToAuth()"
         >
           {{ 'IDEA_AUTH.BACK_TO_SIGN_IN' | translate }}
