--- a/modules/auth/src/forgotPassword.page.html
+++ b/modules/auth/src/forgotPassword.page.html
@@ -18,21 +18,21 @@
             autocorrect="off"
             autocapitalize="off"
             autocomplete="email"
-            [placeholder]="t._('IDEA_AUTH.EMAIL')"
-            [title]="t._('IDEA_AUTH.EMAIL_HINT')"
+            [placeholder]="'IDEA_AUTH.EMAIL' | translate"
+            [title]="'IDEA_AUTH.EMAIL_HINT' | translate"
             [ngModelOptions]="{ standalone: true }"
             [(ngModel)]="email"
             (keyup.enter)="forgotPassword()"
           ></ion-input>
         </ion-item>
-        <ion-button expand="block" [title]="t._('IDEA_AUTH.RESET_MY_PASSWORD_HINT')" (click)="forgotPassword()">
+        <ion-button expand="block" [title]="'IDEA_AUTH.RESET_MY_PASSWORD_HINT' | translate" (click)="forgotPassword()">
           {{ 'IDEA_AUTH.RESET_MY_PASSWORD' | translate }}
         </ion-button>
         <ion-button
           fill="clear"
           expand="block"
           class="smallCaseButton"
-          [title]="t._('IDEA_AUTH.ALREADY_HAVE_A_RESET_CODE_HINT')"
+          [title]="'IDEA_AUTH.ALREADY_HAVE_A_RESET_CODE_HINT' | translate"
           (click)="goToConfirmPassword()"
         >
           {{ 'IDEA_AUTH.ALREADY_HAVE_A_RESET_CODE' | translate }}
@@ -41,7 +41,7 @@
           fill="clear"
           expand="block"
           class="smallCaseButton"
-          [title]="t._('IDEA_AUTH.BACK_TO_SIGN_IN_HINT')"
+          [title]="'IDEA_AUTH.BACK_TO_SIGN_IN_HINT' | translate"
           (click)="goToAuth()"
         >
           {{ 'IDEA_AUTH.BACK_TO_SIGN_IN' | translate }}
