--- a/modules/auth/src/signIn.page.html
+++ b/modules/auth/src/signIn.page.html
@@ -6,12 +6,12 @@
     <div>
       <ion-card class="authCard">
         <ion-img
-          [title]="t._('IDEA_AUTH.SERVICE_LOGO')"
+          [title]="'IDEA_AUTH.SERVICE_LOGO' | translate"
           [src]="darkMode ? 'assets/icons/icon-auth-alt.svg' : 'assets/icons/icon-auth.svg'"
         ></ion-img>
         <ion-card-header>
           <ion-card-title color="primary" *ngIf="title">{{ title }}</ion-card-title>
-          <ion-card-subtitle *ngIf="t._('IDEA_VARIABLES.TAGLINE')">
+          <ion-card-subtitle *ngIf="translationExists('IDEA_VARIABLES.TAGLINE')">
             {{ 'IDEA_VARIABLES.TAGLINE' | translate }}
           </ion-card-subtitle>
         </ion-card-header>
@@ -29,8 +29,8 @@
               autocorrect="off"
               autocapitalize="off"
               autocomplete="email"
-              [placeholder]="t._('IDEA_AUTH.EMAIL')"
-              [title]="t._('IDEA_AUTH.EMAIL_HINT')"
+              [placeholder]="'IDEA_AUTH.EMAIL' | translate"
+              [title]="'IDEA_AUTH.EMAIL_HINT' | translate"
               [ngModelOptions]="{ standalone: true }"
               [(ngModel)]="email"
               (keyup.enter)="login()"
@@ -49,8 +49,8 @@
               autocapitalize="off"
               autocomplete="current-password"
               [clearOnEdit]="false"
-              [placeholder]="t._('IDEA_AUTH.PASSWORD')"
-              [title]="t._('IDEA_AUTH.PASSWORD_HINT')"
+              [placeholder]="'IDEA_AUTH.PASSWORD' | translate"
+              [title]="'IDEA_AUTH.PASSWORD_HINT' | translate"
               [ngModelOptions]="{ standalone: true }"
               [(ngModel)]="password"
               (keyup.enter)="login()"
@@ -60,7 +60,7 @@
             class="agreementsAcceptanceRow"
             *ngIf="
               !registrationPossible &&
-              (t._('IDEA_VARIABLES.TERMS_AND_CONDITIONS_URL') || t._('IDEA_VARIABLES.PRIVACY_POLICY_URL'))
+              (translationExists('IDEA_VARIABLES.TERMS_AND_CONDITIONS_URL') || translationExists('IDEA_VARIABLES.PRIVACY_POLICY_URL'))
             "
           >
             <ion-col>
@@ -74,15 +74,15 @@
                 ion-text
                 color="primary"
                 target="_blank"
-                *ngIf="t._('IDEA_VARIABLES.TERMS_AND_CONDITIONS_URL')"
-                [title]="t._('IDEA_AUTH.TERMS_AND_CONDITIONS_HINT')"
-                [href]="t._('IDEA_VARIABLES.TERMS_AND_CONDITIONS_URL')"
+                *ngIf="translationExists('IDEA_VARIABLES.TERMS_AND_CONDITIONS_URL')"
+                [title]="'IDEA_AUTH.TERMS_AND_CONDITIONS_HINT' | translate"
+                [href]="'IDEA_VARIABLES.TERMS_AND_CONDITIONS_URL' | translate"
               >
                 {{ 'IDEA_AUTH.TERMS_AND_CONDITIONS' | translate }}
               </a>
               <ion-text
                 *ngIf="
-                  t._('IDEA_VARIABLES.PRIVACY_POLICY_URL') && t._('IDEA_VARIABLES.TERMS_AND_CONDITIONS_URL')
+                translationExists('IDEA_VARIABLES.PRIVACY_POLICY_URL') && translationExists('IDEA_VARIABLES.TERMS_AND_CONDITIONS_URL')
                 "
               >
                 &
@@ -91,9 +91,9 @@
                 ion-text
                 color="primary"
                 target="_blank"
-                *ngIf="t._('IDEA_VARIABLES.PRIVACY_POLICY_URL')"
-                [title]="t._('IDEA_AUTH.PRIVACY_POLICY_HINT')"
-                [href]="t._('IDEA_VARIABLES.PRIVACY_POLICY_URL')"
+                *ngIf="translationExists('IDEA_VARIABLES.PRIVACY_POLICY_URL')"
+                [title]="'IDEA_AUTH.PRIVACY_POLICY_HINT' | translate"
+                [href]="'IDEA_VARIABLES.PRIVACY_POLICY_URL' | translate"
               >
                 {{ 'IDEA_AUTH.PRIVACY_POLICY' | translate }}
               </a>
@@ -102,7 +102,7 @@
           <ion-button
             expand="block"
             [disabled]="!agreementsCheck"
-            [title]="t._('IDEA_AUTH.SIGN_IN_HINT')"
+            [title]="'IDEA_AUTH.SIGN_IN_HINT' | translate"
             (click)="login()"
           >
             {{ 'IDEA_AUTH.SIGN_IN' | translate }}
@@ -112,7 +112,7 @@
             expand="block"
             class="smallCaseButton"
             *ngIf="registrationPossible"
-            [title]="t._('IDEA_AUTH.CREATE_AN_ACCOUNT_HINT')"
+            [title]="'IDEA_AUTH.CREATE_AN_ACCOUNT_HINT' | translate"
             (click)="goToRegistration()"
           >
             {{ 'IDEA_AUTH.CREATE_AN_ACCOUNT' | translate }}
@@ -121,7 +121,7 @@
             fill="clear"
             expand="block"
             class="smallCaseButton"
-            [title]="t._('IDEA_AUTH.I_FORGOT_MY_PASSWORD_HINT')"
+            [title]="'IDEA_AUTH.I_FORGOT_MY_PASSWORD_HINT' | translate"
             (click)="goToForgotPassword()"
           >
             {{ 'IDEA_AUTH.I_FORGOT_MY_PASSWORD' | translate }}
@@ -132,7 +132,7 @@
             color="medium"
             class="smallCaseButton"
             *ngIf="hasIntroPage"
-            [title]="t._('IDEA_AUTH.BACK_TO_INTRO_HINT')"
+            [title]="'IDEA_AUTH.BACK_TO_INTRO_HINT' | translate"
             (click)="goToIntro()"
           >
             {{ 'IDEA_AUTH.BACK_TO_INTRO' | translate }}
@@ -143,7 +143,7 @@
         class="ideaLogo"
         *ngIf="website"
         [src]="darkMode ? './assets/icons/idea-alt.png' : './assets/icons/idea.png'"
-        [title]="t._('IDEA_AUTH.IDEA_TAGLINE')"
+        [title]="'IDEA_AUTH.IDEA_TAGLINE' | translate"
         (click)="openLink(website)"
       ></ion-img>
     </div>
