--- a/modules/auth/src/signUp.page.html
+++ b/modules/auth/src/signUp.page.html
@@ -22,8 +22,8 @@
             autocorrect="off"
             autocapitalize="off"
             autocomplete="off"
-            [placeholder]="t._('IDEA_AUTH.EMAIL')"
-            [title]="t._('IDEA_AUTH.REGISTRATION_EMAIL_HINT')"
+            [placeholder]="'IDEA_AUTH.EMAIL' | translate"
+            [title]="'IDEA_AUTH.REGISTRATION_EMAIL_HINT' | translate"
             [ngModelOptions]="{ standalone: true }"
             [(ngModel)]="email"
             (keyup.enter)="register()"
@@ -41,8 +41,8 @@
             autocapitalize="off"
             autocomplete="off"
             [clearOnEdit]="false"
-            [placeholder]="t._('IDEA_AUTH.PASSWORD')"
-            [title]="t._('IDEA_AUTH.CHOOSE_A_PASSWORD')"
+            [placeholder]="'IDEA_AUTH.PASSWORD' | translate"
+            [title]="'IDEA_AUTH.CHOOSE_A_PASSWORD' | translate"
             [ngModelOptions]="{ standalone: true }"
             [(ngModel)]="password"
             (keyup.enter)="register()"
@@ -50,7 +50,7 @@
         </ion-item>
         <ion-row
           class="agreementsAcceptanceRow"
-          *ngIf="t._('IDEA_VARIABLES.TERMS_AND_CONDITIONS_URL') || t._('IDEA_VARIABLES.PRIVACY_POLICY_URL')"
+          *ngIf="translationExists('IDEA_VARIABLES.TERMS_AND_CONDITIONS_URL') || translationExists('IDEA_VARIABLES.PRIVACY_POLICY_URL')"
         >
           <ion-col>
             <ion-checkbox
@@ -63,15 +63,15 @@
               ion-text
               color="primary"
               target="_blank"
-              *ngIf="t._('IDEA_VARIABLES.TERMS_AND_CONDITIONS_URL')"
-              [title]="t._('IDEA_AUTH.TERMS_AND_CONDITIONS_HINT')"
-              [href]="t._('IDEA_VARIABLES.TERMS_AND_CONDITIONS_URL')"
+              *ngIf="translationExists('IDEA_VARIABLES.TERMS_AND_CONDITIONS_URL')"
+              [title]="'IDEA_AUTH.TERMS_AND_CONDITIONS_HINT' | translate"
+              [href]="'IDEA_VARIABLES.TERMS_AND_CONDITIONS_URL' | translate"
             >
               {{ 'IDEA_AUTH.TERMS_AND_CONDITIONS' | translate }}
             </a>
             <ion-text
               *ngIf="
-                t._('IDEA_VARIABLES.PRIVACY_POLICY_URL') && t._('IDEA_VARIABLES.TERMS_AND_CONDITIONS_URL')
+              translationExists('IDEA_VARIABLES.PRIVACY_POLICY_URL') && translationExists('IDEA_VARIABLES.TERMS_AND_CONDITIONS_URL')
               "
             >
               &
@@ -80,9 +80,9 @@
               ion-text
               color="primary"
               target="_blank"
-              *ngIf="t._('IDEA_VARIABLES.PRIVACY_POLICY_URL')"
-              [title]="t._('IDEA_AUTH.PRIVACY_POLICY_HINT')"
-              [href]="t._('IDEA_VARIABLES.PRIVACY_POLICY_URL')"
+              *ngIf="translationExists('IDEA_VARIABLES.PRIVACY_POLICY_URL')"
+              [title]="'IDEA_AUTH.PRIVACY_POLICY_HINT' | translate"
+              [href]="'IDEA_VARIABLES.PRIVACY_POLICY_URL' | translate"
             >
               {{ 'IDEA_AUTH.PRIVACY_POLICY' | translate }}
             </a>
@@ -91,7 +91,7 @@
         <ion-button
           expand="block"
           [disabled]="!agreementsCheck"
-          [title]="t._('IDEA_AUTH.CREATE_AN_ACCOUNT_HINT')"
+          [title]="'IDEA_AUTH.CREATE_AN_ACCOUNT_HINT' | translate"
           (click)="register()"
         >
           {{ 'IDEA_AUTH.CREATE_AN_ACCOUNT' | translate }}
@@ -100,7 +100,7 @@
           fill="clear"
           expand="block"
           class="smallCaseButton"
-          [title]="t._('IDEA_AUTH.HAVEN_T_RECEIVED_CONFIRMATION_LINK_HINT')"
+          [title]="'IDEA_AUTH.HAVEN_T_RECEIVED_CONFIRMATION_LINK_HINT' | translate"
           (click)="goToResendLink()"
         >
           {{ 'IDEA_AUTH.HAVEN_T_RECEIVED_CONFIRMATION_LINK' | translate }}
@@ -109,7 +109,7 @@
           fill="clear"
           expand="block"
           class="smallCaseButton"
-          [title]="t._('IDEA_AUTH.BACK_TO_SIGN_IN_HINT')"
+          [title]="'IDEA_AUTH.BACK_TO_SIGN_IN_HINT' | translate"
           (click)="goToAuth()"
         >
           {{ 'IDEA_AUTH.BACK_TO_SIGN_IN' | translate }}
