feat(auth): better password policy UX

--- a/modules/auth/src/confirmPassword.page.html
+++ b/modules/auth/src/confirmPassword.page.html
@@ -3,7 +3,6 @@
     <ion-card class="authCard">
       <ion-card-header>
         <ion-card-title color="primary">{{ 'IDEA_AUTH.CHANGE_THE_PASSWORD' | translate }}</ion-card-title>
-        <ion-card-subtitle>{{ 'IDEA_AUTH.CHANGE_THE_PASSWORD_HINT' | translate: { n: 8 } }}</ion-card-subtitle>
       </ion-card-header>
       <ion-card-content>
         <p class="errorBox" *ngIf="errorMsg">
@@ -12,7 +11,7 @@
         </p>
         <ion-item>
           <ion-label position="inline">
-            <ion-icon name="person-circle" color="primary"> </ion-icon>
+            <ion-icon name="person-circle" color="primary"></ion-icon>
           </ion-label>
           <ion-input
             type="email"
@@ -52,11 +51,11 @@
           </ion-label>
           <ion-input
             type="password"
-            pattern=".{8,}"
             spellcheck="false"
             autocorrect="off"
             autocapitalize="off"
             autocomplete="new-password"
+            [pattern]="auth.getPasswordPolicyPatternForInput()"
             [clearOnEdit]="false"
             [placeholder]="'IDEA_AUTH.NEW_PASSWORD' | translate"
             [title]="'IDEA_AUTH.CHOOSE_A_PASSWORD' | translate"
@@ -64,6 +63,9 @@
             [(ngModel)]="newPassword"
             (keyup.enter)="confirmPassword()"
           ></ion-input>
+          <ion-button slot="end" fill="clear" color="dark" (click)="openPasswordPolicy($event)">
+            <ion-icon icon="help-circle-outline" slot="icon-only"></ion-icon>
+          </ion-button>
         </ion-item>
         <ion-button
           expand="block"
