--- a/modules/auth/src/newPassword.page.html
+++ b/modules/auth/src/newPassword.page.html
@@ -16,11 +16,11 @@
           </ion-label>
           <ion-input
             type="password"
-            pattern=".{8,}"
             spellcheck="false"
             autocorrect="off"
             autocapitalize="off"
             autocomplete="new-password"
+            [pattern]="auth.getPasswordPolicyPatternForInput()"
             [clearOnEdit]="false"
             [placeholder]="'IDEA_AUTH.PASSWORD' | translate"
             [title]="'IDEA_AUTH.CHOOSE_A_PASSWORD' | translate"
@@ -28,6 +28,9 @@
             [(ngModel)]="newPassword"
             (keyup.enter)="confirmNewPassword()"
           ></ion-input>
+          <ion-button slot="end" fill="clear" color="dark" (click)="openPasswordPolicy($event)">
+            <ion-icon icon="help-circle-outline" slot="icon-only"></ion-icon>
+          </ion-button>
         </ion-item>
         <ion-button
           expand="block"
