--- a/modules/auth/src/signUp.page.html
+++ b/modules/auth/src/signUp.page.html
@@ -12,7 +12,7 @@
         </p>
         <ion-item>
           <ion-label position="inline">
-            <ion-icon name="person-circle" color="primary"> </ion-icon>
+            <ion-icon name="person-circle" color="primary"></ion-icon>
           </ion-label>
           <ion-input
             type="email"
@@ -35,11 +35,11 @@
           </ion-label>
           <ion-input
             type="password"
-            pattern=".{8,}"
             spellcheck="false"
             autocorrect="off"
             autocapitalize="off"
             autocomplete="off"
+            [pattern]="auth.getPasswordPolicyPatternForInput()"
             [clearOnEdit]="false"
             [placeholder]="'IDEA_AUTH.PASSWORD' | translate"
             [title]="'IDEA_AUTH.CHOOSE_A_PASSWORD' | translate"
@@ -47,6 +47,9 @@
             [(ngModel)]="password"
             (keyup.enter)="register()"
           ></ion-input>
+          <ion-button slot="end" fill="clear" color="dark" (click)="openPasswordPolicy($event)">
+            <ion-icon icon="help-circle-outline" slot="icon-only"></ion-icon>
+          </ion-button>
         </ion-item>
         <ion-row
           class="agreementsAcceptanceRow"
