--- a/modules/auth/src/signIn.page.html
+++ b/modules/auth/src/signIn.page.html
@@ -4,11 +4,12 @@
   </ion-card>
   <form class="flexBox">
     <div>
-      <ion-card class="authCard">
-        <ion-img
+      <ion-img
+          class="serviceLogo"
           [title]="'IDEA_AUTH.SERVICE_LOGO' | translate"
           [src]="darkMode ? 'assets/icons/icon-auth-alt.svg' : 'assets/icons/icon-auth.svg'"
         ></ion-img>
+      <ion-card class="authCard">
         <ion-card-header>
           <ion-card-title color="primary" *ngIf="title">{{ title }}</ion-card-title>
           <ion-card-subtitle *ngIf="translationExists('IDEA_VARIABLES.TAGLINE')">
@@ -17,9 +18,8 @@
         </ion-card-header>
         <ion-card-content>
           <p class="errorBox" *ngIf="errorMsg"><b>{{ 'IDEA_AUTH.WARNING' | translate }}.</b> {{ errorMsg }}</p>
-          <ion-item>
+          <ion-item lines="inset" class="ion-margin-top">
             <ion-label position="inline">
-              <ion-icon name="person-circle" color="primary"></ion-icon>
             </ion-label>
             <ion-input
               type="email"
@@ -36,24 +36,35 @@
               (keyup.enter)="login()"
             ></ion-input>
           </ion-item>
-          <ion-item>
+          <ion-item lines="inset" class="ion-margin-top">
             <ion-label position="inline">
-              <ion-icon name="key" color="primary"></ion-icon>
             </ion-label>
             <ion-input
               id="current-password"
-              type="password"
               spellcheck="false"
               autocorrect="off"
               autocapitalize="off"
               autocomplete="current-password"
+              [type]="revealPassword ? 'text' : 'password'"
               [clearOnEdit]="false"
               [placeholder]="'IDEA_AUTH.PASSWORD' | translate"
               [title]="'IDEA_AUTH.PASSWORD_HINT' | translate"
               [ngModelOptions]="{ standalone: true }"
               [(ngModel)]="password"
               (keyup.enter)="login()"
+              (ionFocus)="canShowPassword = false"
+              (ionBlur)="canShowPassword = true"
             ></ion-input>
+            <ion-button
+              *ngIf="canShowPassword && password.length"
+              class="itemEnd"
+              slot="end"
+              fill="clear"
+              (click)="revealPassword = !revealPassword"
+            >
+              <ion-icon *ngIf="revealPassword" name="eye-off-outline" slot="icon-only"></ion-icon>
+              <ion-icon *ngIf="!revealPassword" name="eye-outline" slot="icon-only"></ion-icon>
+            </ion-button>
           </ion-item>
           <ion-row
             class="agreementsAcceptanceRow"
@@ -99,6 +110,7 @@
             </ion-col>
           </ion-row>
           <ion-button
+            class="ion-padding ion-margin-top signIn"
             expand="block"
             [disabled]="!agreementsCheck"
             [title]="'IDEA_AUTH.SIGN_IN_HINT' | translate"
