--- a/modules/auth/src/signUp.page.html
+++ b/modules/auth/src/signUp.page.html
@@ -10,9 +10,8 @@
           <b> {{ 'IDEA_AUTH.ERROR' | translate }}. </b>
           {{ errorMsg }}
         </p>
-        <ion-item>
+        <ion-item lines="inset" class="ion-margin-top">
           <ion-label position="inline">
-            <ion-icon name="person-circle" color="primary"></ion-icon>
           </ion-label>
           <ion-input
             type="email"
@@ -29,9 +28,8 @@
             (keyup.enter)="register()"
           ></ion-input>
         </ion-item>
-        <ion-item>
+        <ion-item lines="inset" class="ion-margin-top">
           <ion-label position="inline">
-            <ion-icon name="key" color="primary"></ion-icon>
           </ion-label>
           <ion-input
             type="password"
@@ -47,7 +45,7 @@
             [(ngModel)]="password"
             (keyup.enter)="register()"
           ></ion-input>
-          <ion-button slot="end" fill="clear" color="dark" (click)="openPasswordPolicy($event)">
+          <ion-button class="itemEnd" slot="end" fill="clear" color="dark" (click)="openPasswordPolicy($event)">
             <ion-icon icon="help-circle-outline" slot="icon-only"></ion-icon>
           </ion-button>
         </ion-item>
@@ -92,6 +90,7 @@
           </ion-col>
         </ion-row>
         <ion-button
+          class="ion-padding ion-margin-top signUp"
           expand="block"
           [disabled]="!agreementsCheck"
           [title]="'IDEA_AUTH.CREATE_AN_ACCOUNT_HINT' | translate"
